--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,10 +9,9 @@ variables:
 
 steps:
 - task: UseDotNet@2
-  displayName: 'Use .NET SDK 6.x'
   inputs:
-    packageType: sdk
-    version: '6.x'
+    packageType: 'sdk'
+    version: '8.0.x'  # o la versión específica que necesitas
 
 # ✅ Usar Node.js 20.x (compatible con Dart Sass)
 - task: UseNode@1
