--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,18 +13,18 @@ steps:
     packageType: 'sdk'
     version: '8.0.x'  # o la versión específica que necesitas
 
-# ✅ Usar Node.js 20.x (compatible con Dart Sass)
+#  Usar Node.js 20.x (compatible con Dart Sass)
 - task: UseNode@1
   displayName: 'Use Node.js 20.x'
   inputs:
     version: '20.x'
 
-# ✅ Instalar dependencias sin usar legacy-peer-deps ni node-gyp
+#  Instalar dependencias sin usar legacy-peer-deps ni node-gyp
 - script: |
     npm install
   displayName: 'Install Node modules'
 
-# ✅ Compilar Sass con Dart Sass (sass en lugar de node-sass)
+#  Compilar Sass con Dart Sass (sass en lugar de node-sass)
 - script: 'npx sass Tailspin.SpaceGame.Web/wwwroot:Tailspin.SpaceGame.Web/wwwroot'
   displayName: 'Compile Sass assets with Dart Sass'
 
